Correction responsive + footer + scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
+section {
+  @apply p-3
+}
